<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailMovieActivity"
    tools:showIn="@layout/activity_detail_movie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp"
        >

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:android="http://schemas.android.com/apk/res/android"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/detail_image_view"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/ImageDescription"
                    />

                <ScrollView
                    android:id="@+id/title_ScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp"
                        >

                        <TextView
                            android:id="@+id/tv_tile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/movie_title"
                            />

                        <TextView
                            android:id="@+id/tv_release"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/movie_date"
                            />

                        <TextView
                            android:id="@+id/tv_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/movie_rate"
                            />
                    </LinearLayout>


                </ScrollView>

            </LinearLayout>

            <ScrollView
                android:id="@+id/overview_scrollview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    >

                    <TextView
                        android:id="@+id/tv_over_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:text="@string/movie_overview" />

                </FrameLayout>
            </ScrollView>


        </LinearLayout>
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_video_title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/video_title"
                android:textSize="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textStyle="bold"

                />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_video"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:visibility="visible"
                />

        </LinearLayout>
      </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_review_title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/review_title"
                android:textSize="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                android:textStyle="bold"

                />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray"
                android:visibility="visible"
                />
        </LinearLayout>

    </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>